--- a/ejercicios2/ej12-DomArbolModificar/index.html
+++ b/ejercicios2/ej12-DomArbolModificar/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ej12 - DomArbolModificar</title>
+	<title>Ej12 - DomArbolModificarTable</title>
 	<style type="text/css">
 		h1 {
 			font-weight: normal;
