--- a/ejercicios2/ej14-DomModificarAddForm/index.html
+++ b/ejercicios2/ej14-DomModificarAddForm/index.html
@@ -24,24 +24,24 @@
 				<h3 class="text-primary">Selecciona</h3>
 			</div>
 			<div class="col-7 text-left">
-				<button class="btn btn-primary">Caja de Texto</button>
-				<button class="btn btn-primary">Botones</button>
-				<button class="btn btn-primary">Radio botones</button>
+				<button class="btn btn-primary" onclick="mostrarDiv('texto');">Caja de Texto</button>
+				<button class="btn btn-primary" onclick="mostrarDiv('boton');">Botones</button>
+				<button class="btn btn-primary" onclick="mostrarDiv('radio');">Radio botones</button>
 			</div>
 		</div>
 		<hr />
-		<div id="divCajaTexto">
+		<div id="divCajaTexto" class="">
 			<div class="row rounded m-0 bg-light p-3">
 				<div class="col-6">
 					<h4>Has elegido crear - <span class="text-muted">Caja de Texto</span></h4>
 					<hr />
-					<input type="text" class="form-control" name="labelCajaTexto" placeholder="Inserta una etiqueta">
+					<input type="text" class="form-control" name="labelCajaTexto" id="labelCajaTexto" placeholder="Inserta una etiqueta">
 				</div>
 				<div class="col-6">
 					<h4 class="text-center"><span class="text-muted">Preview</span></h4>
 					<hr />
 					<div class="form-row">
-						<label class="col-5 text-right">Nombre:</label>
+						<label class="col-5 text-right" id="labelPreviewCajaTexto"></label>
 						<input type="text" name="elemCajaTexto" class="form-control col" value="" />
 					</div>
 				</div>
@@ -52,18 +52,34 @@
 			</div>
 		</div>
 
-		<div id="divBoton">
-			<div class="row rounded m-0 bg-light p-3 d-none">
+		<div id="divBoton" class="">
+			<div class="row rounded m-0 bg-light p-3">
 				<div class="col-6">
 					<h4>Has elegido crear - <span class="text-muted">Boton</span></h4>
 					<hr />
-					<input type="text" class="form-control" name="labelBoton" placeholder="Inserta una etiqueta">
+					<div class="form-row mb-3">
+						<div class="form-check form-check-inline">
+						  <input class="form-check-input" type="radio" name="tipoBoton" id="inlineRadio1" value="submit" checked="checked">
+						  <label class="form-check-label" for="inlineRadio1">Submit</label>
+						</div>
+						<div class="form-check form-check-inline">
+						  <input class="form-check-input" type="radio" name="tipoBoton" id="inlineRadio2" value="button">
+						  <label class="form-check-label" for="inlineRadio2">Button</label>
+						</div>
+						<div class="form-check form-check-inline">
+						  <input class="form-check-input" type="radio" name="tipoBoton" id="inlineRadio2" value="reset">
+						  <label class="form-check-label" for="inlineRadio2">Reset</label>
+						</div>
+					</div>
+					<div class="form-row">
+						<input type="text" class="form-control" name="labelBoton" id="labelBoton" placeholder="Inserta una etiqueta">
+					</div>
 				</div>
 				<div class="col-6">
 					<h4 class="text-center"><span class="text-muted">Preview</span></h4>
 					<hr />
 					<div class="text-center">
-						<input type="button" name="elemBoton" class="btn btn-dark" value="Enviar" />
+						<input type="button" name="elemBoton" id="previewBoton" class="btn btn-dark" value="Enviar" />
 					</div>
 				</div>
 				<div class="col-12 text-center py-3">
@@ -73,14 +89,14 @@
 			</div>
 		</div>
 
-		<div id="divRadioButton">
-			<div class="row rounded m-0 bg-light p-3 d-none">
+		<div id="divRadioButton" class="">
+			<div class="row rounded m-0 bg-light p-3">
 				<div class="col-6">
 					<h4>Has elegido crear - <span class="text-muted">Radio Botones</span></h4>
 					<hr />
 					<div class="form-row mb-3">
 						<div class="form-check form-check-inline">
-						  <input class="form-check-input" type="radio" name="tipoRadio" id="inlineRadio1" value="vertical">
+						  <input class="form-check-input" type="radio" name="tipoRadio" id="inlineRadio1" value="vertical" checked="checked">
 						  <label class="form-check-label" for="inlineRadio1">Vertical</label>
 						</div>
 						<div class="form-check form-check-inline">
@@ -89,7 +105,7 @@
 						</div>
 					</div>
 					<div class="form-row">
-						<input type="text" class="form-control col-6" name="labelRadioButton" placeholder="Inserta una etiqueta">
+						<input type="text" class="form-control col-6" name="labelRadioButton" id="labelRadioButton" placeholder="Inserta una etiqueta">
 						<div class="col">
 							<input type="button" class="btn btn-secondary" value="Añadir Opción" />
 						</div>
@@ -136,7 +152,7 @@
 					<button class="btn btn-danger"><i class="fas fa-trash"></i></button>
 				</div>
 			</div>
-			<hr />
+			<hr>
 			<div class="row m-0 p-3">
 				<div class="col-8 text-left">
 					<button class="btn btn-dark">Enviar</button>
@@ -145,7 +161,7 @@
 					<button class="btn btn-danger"><i class="fas fa-trash"></i></button>
 				</div>
 			</div>
-			<hr />
+			<hr>
 			<div class="row m-0 p-3">
 				<div class="col-8">
 					<div class="form-check">
